--- a/styles/style.css
+++ b/styles/style.css
@@ -118,3 +118,16 @@ footer {
 .map-link {
   text-shadow: 1px 1px 1px #000;
 }
+
+.tribal-map-container::after {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  pointer-events: none; /* so it doesn’t interfere with clicking */
+  background-image:
+    repeating-linear-gradient(0deg, transparent, transparent 9%, rgba(0,0,0,0.1) 9%, rgba(0,0,0,0.1) 10%),
+    repeating-linear-gradient(90deg, transparent, transparent 9%, rgba(0,0,0,0.1) 9%, rgba(0,0,0,0.1) 10%);
+}
