--- a/styles/style.css
+++ b/styles/style.css
@@ -179,18 +179,18 @@ footer {
 /* Wax Seal Close Button */
 .popup-close {
   position: absolute;
-  top: 10px;
-  right: 15px;
-  width: 30px;
-  height: 30px;
+  top: -15px;   /* move upwards */
+  right: -15px; /* move rightwards */
+  width: 35px;
+  height: 35px;
   background: radial-gradient(circle at 30% 30%, #a52a2a, #7b1e1e);
   border: 2px solid #5c1313;
   border-radius: 50%;
   color: #fdf6e3;
   font-weight: bold;
   font-family: Georgia, serif;
-  font-size: 16px;
-  line-height: 28px;
+  font-size: 18px;
+  line-height: 32px;
   text-align: center;
   box-shadow: 0 0 5px rgba(0,0,0,0.5);
   cursor: pointer;
