--- a/styles/style.css
+++ b/styles/style.css
@@ -181,7 +181,9 @@ footer {
 .popup-shield {
   width: 70px;
   float: left;
-  margin: 0 15px 10px 0;
+  margin: 0 15px 0 0;
+  position: relative;
+  top: -5px;
 }
 
 /* Popup Text */
