--- a/styles/style.css
+++ b/styles/style.css
@@ -175,24 +175,27 @@ footer {
 .popup-header {
   display: flex;
   align-items: center;
-  justify-content: flex-start;
+  justify-content: center;
+  position: relative;
   margin-bottom: 15px;
-}
-
-/* Tribe Name */
-.popup-header h3 {
-  flex: 1;
-  text-align: center;
-  margin: 0;
-  padding: 0;
 }
 
 /* Shield */
 .popup-shield {
+  position: absolute;
+  left: 0;
+  top: 50%;
+  transform: translateY(-50%);
   width: 70px;
   height: auto;
-  margin-right: 15px;
-  margin-top: -10px;
+}
+
+/* Tribe Name */
+.popup-header h3 {
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  text-align: center;
 }
 
 /* Popup Text */
