--- a/styles/style.css
+++ b/styles/style.css
@@ -175,27 +175,24 @@ footer {
 .popup-header {
   display: flex;
   align-items: center;
-  justify-content: center;
-  position: relative;
-  margin-bottom: 15px;
+  justify-content: flex-start;
+  gap: 20px;
+  margin-bottom: 25px;
 }
 
 /* Shield */
 .popup-shield {
-  position: absolute;
-  left: 0;
-  top: 50%;
-  transform: translateY(-50%);
   width: 70px;
-  height: auto;
+  flex-shrink: 0;
+  margin-top: -5px;
 }
 
 /* Tribe Name */
 .popup-header h3 {
+  flex: 1;
+  text-align: center;
   margin: 0;
   padding: 0;
-  width: 100%;
-  text-align: center;
 }
 
 /* Popup Text */
