--- a/styles/style.css
+++ b/styles/style.css
@@ -173,12 +173,12 @@ footer {
 
 /* Popup Header */
 .popup-header {
-  display: flex;
+  display: grid;
+  grid-template-columns: 70px 1fr;
   align-items: center;
-  justify-content: flex-start;
-  gap: 20px;
   margin-bottom: 25px;
 }
+
 
 /* Shield */
 .popup-shield {
